--- a/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareLinkOptionCell.xib
+++ b/Owncloud iOs Client/Tabs/FileTab/Share/Cells/ShareLinkOptionCell.xib
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -15,76 +17,38 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bdN-Mu-iOS">
-                        <rect key="frame" x="15" y="7" width="235" height="21"/>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bdN-Mu-iOS">
+                        <rect key="frame" x="15" y="18" width="235" height="21"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KwH-fr-NKC">
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KwH-fr-NKC">
                         <rect key="frame" x="15" y="36" width="235" height="11"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="11" id="aWH-uD-vwn"/>
-                        </constraints>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2eu-Ak-XXg">
+                    <switch hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2eu-Ak-XXg">
                         <rect key="frame" x="260" y="10" width="51" height="31"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="31" id="PJR-Q6-ryQ"/>
-                            <constraint firstAttribute="width" constant="49" id="bh5-DE-gNa"/>
-                        </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="PJR-Q6-ryQ"/>
-                                <exclude reference="bh5-DE-gNa"/>
-                            </mask>
-                        </variation>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES"/>
                     </switch>
+                    <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="a" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8o2-eX-fQg" userLabel="Text Field">
+                        <rect key="frame" x="15" y="12" width="244" height="30"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textInputTraits key="textInputTraits"/>
+                    </textField>
                 </subviews>
-                <constraints>
-                    <constraint firstItem="KwH-fr-NKC" firstAttribute="top" secondItem="bdN-Mu-iOS" secondAttribute="bottom" constant="8" id="2CQ-hw-pkY"/>
-                    <constraint firstItem="2eu-Ak-XXg" firstAttribute="leading" secondItem="bdN-Mu-iOS" secondAttribute="trailing" constant="10" id="2MS-vZ-SCo"/>
-                    <constraint firstItem="2eu-Ak-XXg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="Im2-j1-ScM"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="2eu-Ak-XXg" secondAttribute="bottom" constant="5" id="Nbm-v0-uIj"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="KwH-fr-NKC" secondAttribute="bottom" constant="-1" id="Og4-H8-Loe"/>
-                    <constraint firstItem="KwH-fr-NKC" firstAttribute="trailing" secondItem="bdN-Mu-iOS" secondAttribute="trailing" id="Te8-sV-WRy"/>
-                    <constraint firstItem="KwH-fr-NKC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="7" id="V3l-9h-1gC"/>
-                    <constraint firstItem="KwH-fr-NKC" firstAttribute="top" secondItem="bdN-Mu-iOS" secondAttribute="bottom" constant="8" symbolic="YES" id="WRq-MJ-fHY"/>
-                    <constraint firstItem="2eu-Ak-XXg" firstAttribute="leading" secondItem="KwH-fr-NKC" secondAttribute="trailing" constant="10" id="b2l-Hb-Wb9"/>
-                    <constraint firstItem="KwH-fr-NKC" firstAttribute="leading" secondItem="bdN-Mu-iOS" secondAttribute="leading" id="c1q-WZ-4sJ"/>
-                    <constraint firstItem="KwH-fr-NKC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="7" id="dj1-Bi-bme"/>
-                    <constraint firstItem="2eu-Ak-XXg" firstAttribute="leading" secondItem="KwH-fr-NKC" secondAttribute="trailing" constant="10" id="ggu-RA-nGq"/>
-                    <constraint firstItem="bdN-Mu-iOS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="7" id="izf-rn-v12"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="KwH-fr-NKC" secondAttribute="bottom" constant="-1" id="mTs-Yz-XFr"/>
-                    <constraint firstItem="2eu-Ak-XXg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="mep-Rz-hgh"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="2eu-Ak-XXg" secondAttribute="trailing" constant="3" id="oAq-Ek-hHI"/>
-                    <constraint firstItem="2eu-Ak-XXg" firstAttribute="leading" secondItem="KwH-fr-NKC" secondAttribute="trailing" constant="10" id="pHQ-zF-0HV"/>
-                    <constraint firstItem="bdN-Mu-iOS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-1" id="x9p-KF-u7U"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="2eu-Ak-XXg" secondAttribute="trailing" constant="3" id="yYw-qd-skO"/>
-                </constraints>
-                <variation key="default">
-                    <mask key="constraints">
-                        <exclude reference="izf-rn-v12"/>
-                        <exclude reference="x9p-KF-u7U"/>
-                        <exclude reference="2CQ-hw-pkY"/>
-                        <exclude reference="Og4-H8-Loe"/>
-                        <exclude reference="V3l-9h-1gC"/>
-                        <exclude reference="2MS-vZ-SCo"/>
-                        <exclude reference="Nbm-v0-uIj"/>
-                        <exclude reference="b2l-Hb-Wb9"/>
-                        <exclude reference="mep-Rz-hgh"/>
-                        <exclude reference="oAq-Ek-hHI"/>
-                        <exclude reference="pHQ-zF-0HV"/>
-                    </mask>
-                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="optionDetail" destination="KwH-fr-NKC" id="y4R-Vf-ClA"/>
                 <outlet property="optionName" destination="bdN-Mu-iOS" id="u3J-F0-o1E"/>
                 <outlet property="optionSwith" destination="2eu-Ak-XXg" id="A5V-kN-aIl"/>
+                <outlet property="optionTextField" destination="8o2-eX-fQg" id="qQx-MI-1f6"/>
             </connections>
             <point key="canvasLocation" x="419" y="382.5"/>
         </tableViewCell>
